# Mineral

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PKGBUILD  README.md  ROADMAP.md  cliff.toml  clippy.toml
crates/mineral/: Cargo.toml
crates/mineral-audio/: Cargo.toml
crates/mineral-audio/src/: bps.rs  command.rs  engine.rs  envelope.rs  file_storage.rs  handle.rs  lib.rs  policy.rs  queue_slots.rs  snapshot.rs  tap.rs
crates/mineral-channel/bilibili/: Cargo.toml
crates/mineral-channel/bilibili/examples/: fetch_raw.rs
crates/mineral-channel/bilibili/src/: channel.rs  cli.rs  config.rs  convert.rs  credential.rs  error.rs  lib.rs
crates/mineral-channel/core/: Cargo.toml
crates/mineral-channel/core/src/: caps.rs  credential.rs  error.rs  hits.rs  lib.rs  page.rs
crates/mineral-channel/core/tests/: trait_defaults.rs
crates/mineral-channel/mineral/: Cargo.toml
crates/mineral-channel/mineral/src/: channel.rs  lib.rs
crates/mineral-channel/mock/: Cargo.toml
crates/mineral-channel/mock/src/: lib.rs
crates/mineral-channel/mock/tests/: playlist_edit.rs
crates/mineral-channel/netease/: Cargo.toml
crates/mineral-channel/netease/examples/: apitest.rs  fetch_raw.rs  netease_fetch_raw.rs
crates/mineral-channel/netease/src/: channel.rs  cli.rs  config.rs  convert.rs  credential.rs  error.rs  lib.rs  playlist_cache.rs
crates/mineral-channel/netease/tests/: crypto_vectors.rs
crates/mineral-channel/shelf/: Cargo.toml
crates/mineral-channel/shelf/src/: channel.rs  lib.rs
crates/mineral-cli/: Cargo.toml
crates/mineral-cli/src/: core.rs  lib.rs
crates/mineral-cli/src/subcommands/: action.rs  cache.rs  channel.rs  mod.rs  serve.rs  status.rs  stop.rs
crates/mineral-config/: Cargo.toml
crates/mineral-config-macros/: Cargo.toml
crates/mineral-config-macros/src/: lib.rs  lua_stub.rs
crates/mineral-config/preset/: default.toml
crates/mineral-config/src/: check.rs  init.rs  keys.rs  lib.rs  lua_stub.rs
crates/mineral-config/src/loader/: lua_util.rs  merge.rs  mod.rs  pipeline.rs  stub.rs  tree.rs  warning.rs
crates/mineral-config/src/lua/: default.lua  luarc.json  merge.lua  template.lua
crates/mineral-config/src/schema/: ambient.rs  animation.rs  audio.rs  behavior.rs  cache.rs  (+22 more)
crates/mineral-log/: Cargo.toml
crates/mineral-log/src/: lib.rs
crates/mineral-macros/: Cargo.toml
crates/mineral-macros/src/: lib.rs
crates/mineral-media/: Cargo.toml
crates/mineral-media/src/: command.rs  config.rs  lib.rs  state.rs
crates/mineral-model/: Cargo.toml
crates/mineral-model/src/: album.rs  artist.rs  bitrate.rs  envelope.rs  format.rs  ids.rs  lib.rs  lyrics.rs  play_url.rs  playlist.rs  refs.rs  search.rs  song.rs  source.rs  url.rs
crates/mineral-paths/: Cargo.toml
crates/mineral-paths/src/: lib.rs  linux.rs  macos.rs  socket.rs  xdg.rs
crates/mineral-persist/: Cargo.toml
crates/mineral-persist/migrations/: 0001_baseline.sql  0002_song_meta_alias.sql  0003_song_envelope.sql  0004_shelf_index.sql
crates/mineral-persist/migrations_client/: 0001_baseline.sql
crates/mineral-persist/src/: blob.rs  cache_index.rs  client_store.rs  lib.rs  persist.rs  pool.rs  server_store.rs
crates/mineral-probe/: Cargo.toml
crates/mineral-probe/src/: lib.rs  probe.rs
crates/mineral-protocol/: Cargo.toml
crates/mineral-protocol/src/: cancel.rs  codec.rs  event.rs  frame.rs  handshake.rs  key.rs  lib.rs  message.rs  oneshot.rs  player.rs  queue_edit.rs  store.rs
crates/mineral-protocol/tests/: codec.rs  frame.rs
crates/mineral-script/: Cargo.toml
crates/mineral-script/src/: dispatch.rs  hooks.rs  host.rs  intercept.rs  lib.rs  message.rs  proc.rs  runtime.rs  sender.rs  watchdog.rs
crates/mineral-server/: Cargo.toml
crates/mineral-server/src/: client.rs  config.rs  config_host.rs  download.rs  envelope.rs  events.rs  favorites.rs  gapless.rs  hook_bridge.rs  lib.rs  library.rs  media.rs  media_cache.rs  notify.rs  pcm.rs  player.rs  props.rs  queue.rs  resolve.rs  script_bridge.rs  script_reload.rs  serve.rs  server.rs  session.rs  shelf_scan.rs  state.rs  ui_override.rs
crates/mineral-server/tests/: wire.rs
crates/mineral-spectrum/: Cargo.toml
crates/mineral-spectrum/src/: lib.rs
crates/mineral-stats/: Cargo.toml
crates/mineral-stats/benches/: stats_bench.rs
crates/mineral-stats/migrations/: 0001_baseline.sql  0002_song_dim.sql  0003_copy_ctx_album_artist.sql  0004_client_connections.sql  0005_queue_edit_ops.sql  0006_song_artists.sql
crates/mineral-stats/src/: context.rs  fixture.rs  lib.rs  params.rs  play.rs  report.rs  session.rs  vocab.rs
crates/mineral-task/: Cargo.toml
crates/mineral-task/src/: event.rs  handle.rs  id.rs  kind.rs  lane.rs  lib.rs  ongoing.rs  outcome.rs  scheduler.rs  write.rs
crates/mineral-task/tests/: scheduler.rs
crates/mineral-test/: Cargo.toml
crates/mineral-test/src/: builders.rs  fixtures.rs  lib.rs  lyrics.rs  macros.rs  strategies.rs  wav.rs
crates/mineral-tui/: Cargo.toml
crates/mineral-tui/proptest-regressions/: color.txt
crates/mineral-tui/src/: anim.rs  app.rs  applog.rs  color.rs  cover.rs  daemon.rs  download_toast.rs  layout.rs  lib.rs  loader.rs  lrc.rs  notifications.rs  playback.rs  player_actions.rs  prefetch.rs  remote.rs  state.rs  test_support.rs  theme.rs  toast.rs  tui.rs  view.rs  view_model.rs  yrc.rs
crates/mineral/src/: main.rs
crates/mineral/tests/: cli_smoke.rs  daemon_lifecycle.rs  script_hooks.rs
mineral/: Cargo.toml
mineral-channel/mock/: Cargo.toml
mineral-channel/mock/src/: lib.rs
mineral/src/: app.rs  cmd.rs  layout.rs  main.rs  mock.rs  playback.rs  state.rs  theme.rs  view.rs  view_model.rs
mineral/src/api/: model.rs  parse.rs
mineral/src/app/: context.rs  mod.rs  signals.rs  style.rs
mineral/src/components/: cmd_bar.rs  mod.rs  spectrum.rs  status_bar.rs  top_status.rs  transport.rs
mineral/src/event_handler/: action.rs  global.rs  main_page.rs  popup.rs
mineral/src/state/: mod.rs
mineral/src/ui/: main_page.rs  mod.rs
mineral/src/util/: layout.rs  notification.rs  ui.rs
(+824 files in other folders)
