[workspace]
members = [
    "crates/mineral",
    "crates/mineral-audio",
    "crates/mineral-cli",
    "crates/mineral-log",
    "crates/mineral-task",
    "crates/mineral-tui",
    "crates/mineral-model",
    "crates/mineral-macros",
    "crates/mineral-paths",
    "crates/mineral-channel/core",
    "crates/mineral-channel/mock",
    "crates/mineral-channel/netease",
]
resolver = "2"

[workspace.metadata]
name = "mineral"

[workspace.dependencies]
color-eyre         = "0.6"
base64             = "0.22"
config_rs          = { package = "config", version  = "0.15" }
crossterm          = { version = "0.29", features   = ["event-stream"] }
derive-getters     = "0.5"
derive_setters     = "0.1"
futures-util       = "0.3"
hex                = "0.4"
image              = "0.25"
isahc              = { version = "1.7", features    = ["cookies"] }
libc               = "0.2"
lofty              = "0.22"
mineral-audio           = { path = "crates/mineral-audio" }
mineral-cli             = { path = "crates/mineral-cli" }
mineral-log             = { path = "crates/mineral-log" }
mineral-task            = { path = "crates/mineral-task" }
mineral-tui             = { path = "crates/mineral-tui", default-features = false }
mineral-macros          = { path = "crates/mineral-macros" }
mineral-model           = { path = "crates/mineral-model" }
mineral-paths           = { path = "crates/mineral-paths" }
mineral-channel-core    = { path = "crates/mineral-channel/core" }
mineral-channel-mock    = { path = "crates/mineral-channel/mock" }
mineral-channel-netease = { path = "crates/mineral-channel/netease" }
uuid               = { version = "1", features = ["v4"] }
async-trait        = "0.1"
thiserror          = "1"
regex              = "1"
flate2             = "1"
num-bigint         = "0.4"
num-traits         = "0.2"
aes                = "0.8"
cbc                = "0.1"
ecb                = "0.1"
cipher             = { version = "0.4", features = ["block-padding", "alloc"] }
md-5               = "0.10"
url                = "2"
once_cell          = "1.21"
openssl            = "0.10"
rand               = "0.9"
ratatui            = "0.29"
ratatui-image      = "8.0"
rodio              = { version = "0.22", default-features = false, features = ["playback", "symphonia-mp3", "symphonia-aac", "symphonia-isomp4", "symphonia-flac"] }
stream-download    = { version = "0.13", features = ["http", "reqwest-rustls"] }
clap               = { version = "4.5", features = ["derive"] }
qrcode             = "0.14"
serde              = { version = "1.0", features    = ["derive"] }
serde_json         = "1.0"
signal-hook-tokio  = { version = "0.3", features    = ["futures-v0_3"] }
strum              = "0.27"
strum_macros       = "0.27"
time               = "0.3"
tokio              = { version = "1.45.1", features = ["full"] }
tokio-util         = { version = "0.7" }
parking_lot       = "0.12"
tracing            = "0.1"
tracing-appender   = "0.2"
tracing-subscriber = { version = "0.3", features    = ["fmt", "local-time", "chrono", "env-filter"] }
urlqstring         = "0.3.5"


[workspace.lints.rust]
warnings    = "deny"
unsafe_code = "forbid"
missing_docs = "deny"

[workspace.lints.clippy]
# --- 禁止 panic 类操作（必须用 allow 逐条豁免并注释理由） ---
panic                 = "deny"
unwrap_used           = "deny"
expect_used           = "deny"
indexing_slicing      = "deny"
index_refutable_slice = "deny"

# --- 数值安全 ---
# 除零：编译器自带 unconditional_panic（默认 deny）覆盖常量除零。
# arithmetic_side_effects 不单独启用 — 会拦截 `i += 1` 等安全操作，噪音过大。
as_conversions = "deny"
cast_lossless  = "deny"

# --- 进程安全 ---
exit       = "deny"
mem_forget = "deny"

# --- 错误处理 ---
map_err_ignore = "deny"

# --- 并发安全 ---
mutex_integer       = "deny"
maybe_infinite_iter = "deny"

# --- 所有权与性能 ---
implicit_clone         = "deny"
needless_pass_by_value = "deny"

# --- 代码清晰度 ---
branches_sharing_code             = "deny"
mismatching_type_param_order      = "deny"
option_option                     = "deny"
wildcard_imports                  = "deny"
redundant_closure_for_method_calls = "deny"
uninlined_format_args             = "deny"
cloned_instead_of_copied          = "deny"
manual_let_else                   = "deny"

# --- 项目特化（保留原有偏好） ---
# 避免先 format 再 push 到 String 的低效模式。
format_push_string  = "deny"
# 允许 if/else 分支相同（对称性/未来扩展）。
if_same_then_else   = "allow"
# 允许只有 len() 没有 is_empty()。
len_without_is_empty = "allow"
# 允许 unsafe fn/trait 未写 # Safety 文档。
missing_safety_doc  = "allow"
# 允许模块与其父同名（foo/mod.rs 定义 foo）。
module_inception    = "allow"
# 建议使用 `Self` 而不是显式类型名。
use_self            = "deny"

# --- 体量约束（CLAUDE.md 体量约束节，函数级；阈值见 clippy.toml）---
too_many_lines      = "deny"
