[package]
name = "mineral"
version = "0.1.0"
edition = "2021"

[features]
mock = ["mineral-tui/mock"]

[dependencies]
clap                 = { workspace = true }
color-eyre           = { workspace = true }
mineral-cli          = { path = "../crates/mineral-cli" }
mineral-tui          = { path = "../crates/mineral-tui", default-features = false }

[lints]
workspace = true
