[package]
name    = "mineral-audio"
version = "0.1.0"
edition = "2021"

[dependencies]
mineral-log   = { workspace = true }
mineral-model = { workspace = true }

color-eyre      = { workspace = true }
parking_lot     = { workspace = true }
rodio           = { workspace = true }
stream-download = { workspace = true }
tokio           = { workspace = true }

[lints]
workspace = true
