[package]
name        = "mineral-audio"
description = "音频播放引擎(rodio + symphonia + stream-download)"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
rust-version.workspace = true

[dependencies]
mineral-log   = { workspace = true }
mineral-model = { workspace = true }

color-eyre      = { workspace = true }
derive-getters  = { workspace = true }
parking_lot     = { workspace = true }
ringbuf         = { workspace = true }
rodio           = { workspace = true }
serde           = { workspace = true }
stream-download = { workspace = true }
tokio           = { workspace = true }
typed-builder   = { workspace = true }
url             = { workspace = true }

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
