[package]
name        = "mineral-cli"
description = "Mineral 命令行入口(login / debug 工具)"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
rust-version.workspace = true

[dependencies]
clap                    = { workspace = true }
color-eyre              = { workspace = true }
comfy-table             = { workspace = true }
mineral-audio           = { workspace = true }
mineral-channel-core    = { workspace = true }
mineral-channel-netease = { workspace = true }
mineral-config          = { workspace = true }
mineral-log             = { workspace = true }
mineral-paths           = { workspace = true }
mineral-persist         = { workspace = true }
mineral-protocol        = { workspace = true }
mineral-server          = { workspace = true }
tokio                   = { workspace = true }

[dev-dependencies]
mineral-test = { workspace = true }
insta        = { workspace = true }

[lints]
workspace = true
