[package]
name        = "mineral-config-macros"
description = "mineral-config 专用 proc-macro(配置 schema 样板)"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
rust-version.workspace = true

[lib]
proc-macro = true

[dependencies]
syn   = { workspace = true }
quote = { workspace = true }

[lints]
workspace = true
