[package]
name = "mineral-config"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow         = { workspace = true }
config_rs      = { workspace = true }
once_cell      = { workspace = true }
serde          = { workspace = true }
tracing        = { workspace = true }
derive-getters = { workspace = true }

mineral-platform = { workspace = true }
