[package]
name        = "mineral-macros"
description = "Mineral 内部 macros"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
rust-version.workspace = true

[dependencies]
uuid = { workspace = true }

[dev-dependencies]
serde      = { workspace = true }
serde_json = { workspace = true }

[lints]
workspace = true
