[package]
name        = "mineral-media"
description = "系统媒体服务集成(MPRIS / 媒体键)的平台无关封装"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
rust-version.workspace = true

[dependencies]
color-eyre    = { workspace = true }
mineral-log   = { workspace = true }
mineral-model = { workspace = true }
typed-builder = { workspace = true }

# Linux 走 MPRIS:mpris-server(zbus 官方),支持设任意 metadata 字段
# (含 xesam:asText 歌词)。它是 async 且 server task 为 !Send,故在专属线程
# 的 current-thread runtime + LocalSet 里跑;tokio 仅 Linux 后端需要。
# serde / serde_json 仅 Linux:把结构化逐字歌词序列化成 mineral:words 的 JSON。
# 其它平台暂用 no-op stub,不引入这些依赖。
[target.'cfg(target_os = "linux")'.dependencies]
mpris-server = { version = "0.10", features = ["tokio"] }
serde        = { workspace = true }
serde_json   = { workspace = true }
tokio        = { workspace = true }

# macOS 走系统 Now Playing:MPNowPlayingInfoCenter(上报曲目)+ MPRemoteCommandCenter
# (收播放控制 / 媒体键)。经 objc2 安全绑定调用 Objective-C 框架,所有 FFI 收在
# os/macos 模块的 #[allow(unsafe_code)] 边界内。NSApplication / NSRunLoop 用于在主线程
# 养起 run loop —— 系统媒体中心只把命令派发到主 run loop,这是上报能被收录的前提。
[target.'cfg(target_os = "macos")'.dependencies]
objc2                  = "0.6"
block2                 = "0.6"
objc2-core-foundation  = { version = "0.3", features = ["CFCGTypes"] }
objc2-foundation       = { version = "0.3", features = ["NSString", "NSDictionary", "NSArray", "NSValue", "NSRunLoop", "NSDate", "NSData", "NSThread"] }
objc2-app-kit          = { version = "0.3", features = ["NSApplication", "NSResponder", "NSImage", "NSRunningApplication", "objc2-core-foundation"] }
objc2-media-player     = { version = "0.3", features = ["MPNowPlayingInfoCenter", "MPRemoteCommandCenter", "MPRemoteCommand", "MPRemoteCommandEvent", "MPRemoteControlTypes", "MPMediaItem", "block2", "objc2-app-kit", "objc2-core-foundation"] }

[lints]
workspace = true
