[package]
name        = "mineral-persist"
description = "本地持久化层：server/client 各自的 sqlite 库门面 + 通用文件缓存索引原语"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
rust-version.workspace = true

[dependencies]
color-eyre  = { workspace = true }
sqlx        = { workspace = true }
tokio       = { workspace = true }
rustc-hash  = { workspace = true }
parking_lot = { workspace = true }
mineral-model    = { workspace = true }
mineral-paths    = { workspace = true }
mineral-log      = { workspace = true }
mineral-protocol = { workspace = true }

[dev-dependencies]
tempfile     = "3"
mineral-test = { workspace = true }

[lints]
workspace = true
