[package]
name        = "mineral-server"
description = "Mineral 后台 server:收纳 audio engine + task scheduler + channels,对外发 ClientHandle"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
rust-version.workspace = true

[dependencies]
mineral-audio        = { workspace = true }
mineral-channel-core = { workspace = true }
mineral-config       = { workspace = true }
mineral-log          = { workspace = true }
mineral-media        = { workspace = true }
mineral-model        = { workspace = true }
mineral-paths        = { workspace = true }
mineral-persist      = { workspace = true }
mineral-protocol     = { workspace = true }
mineral-task         = { workspace = true }

color-eyre   = { workspace = true }
futures-util = { workspace = true }
lofty        = { workspace = true }
parking_lot  = { workspace = true }
rand         = { workspace = true }
reqwest      = { workspace = true }
serde       = { workspace = true }
tokio       = { workspace = true }
url         = { workspace = true }

[dev-dependencies]
mineral-test      = { workspace = true }
async-trait       = { workspace = true }
pretty_assertions = { workspace = true }
rustc-hash        = { workspace = true }
serde_json        = { workspace = true }
tempfile          = "3"

[lints]
workspace = true
