[package]
name        = "mineral-server"
description = "Mineral 后台 server:收纳 audio engine + task scheduler + channels,对外发 ClientHandle"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true
rust-version.workspace = true

[dependencies]
mineral-audio        = { workspace = true }
mineral-channel-core = { workspace = true }
mineral-channel-shelf = { workspace = true }
mineral-config       = { workspace = true }
mineral-script       = { workspace = true }
num-traits           = { workspace = true }
rustc-hash           = { workspace = true }
mineral-log          = { workspace = true }
mineral-media        = { workspace = true }
mineral-model        = { workspace = true }
mineral-paths        = { workspace = true }
mineral-persist      = { workspace = true }
mineral-probe        = { workspace = true }
mineral-protocol     = { workspace = true }
mineral-stats        = { workspace = true }
mineral-task         = { workspace = true }

bytes          = { workspace = true }
arc-swap       = { workspace = true }
color-eyre     = { workspace = true }
derive-getters = { workspace = true }
futures-util   = { workspace = true }
parking_lot  = { workspace = true }
rand         = { workspace = true }
reqwest      = { workspace = true }
serde         = { workspace = true }
serde_json    = { workspace = true }
tokio         = { workspace = true }
typed-builder = { workspace = true }
url           = { workspace = true }

[dev-dependencies]
insta             = { workspace = true }
mineral-channel-mineral = { workspace = true }
mineral-test      = { workspace = true }
async-trait       = { workspace = true }
pretty_assertions = { workspace = true }
rustc-hash        = { workspace = true }
serde_json        = { workspace = true }
tempfile          = "3"

[lints]
workspace = true
