[package]
name    = "mineral-task"
version = "0.1.0"
edition = "2021"

[dependencies]
mineral-channel-core = { workspace = true }
mineral-log          = { workspace = true }
mineral-model        = { workspace = true }

async-trait  = { workspace = true }
color-eyre   = { workspace = true }
futures-util = { workspace = true }
image        = { workspace = true }
isahc        = { workspace = true }
parking_lot  = { workspace = true }
tokio        = { workspace = true }
tokio-util   = { workspace = true }

[dev-dependencies]
# 不引入 mineral-channel-mock —— 它的 `mock` feature 会被 cargo workspace unification
# 推给 mineral-model,让其他没显式启 mock 的 crate 看到 SourceKind::Mock。
# 测试自己 in-place 写一个最小的 MusicChannel 实现就够。

[lints]
workspace = true
